🛠 Fix Challenge Info Align

--- a/src/sass/global.sass
+++ b/src/sass/global.sass
@@ -68,7 +68,6 @@ code, pre
 	padding: 1.5rem
 	border-radius: .5rem
 	box-sizing: border-box
-	width: min(600px, 100%)
 
 	font-family: 'Anonymous Pro'
 
