--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -34,9 +34,10 @@ h2
 	flex-direction: column
 	justify-content: center
 	align-items: center
+	width: min(600px, 100%)
+	margin: auto
 
 	p
-		width: min(600px, 100%)
 		text-align: justify
 
 #leaderboard
